// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button default 1`] = `
.c0 {
  background: white;
  color: limegreen;
  box-sizing: border-box;
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
}

<button
  className="c0"
>
  Perform action
</button>
`;

exports[`Button primary 1`] = `
.c0 {
  background: limegreen;
  color: white;
  box-sizing: border-box;
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
}

<button
  className="c0"
>
  Perform action
</button>
`;
